kubernetes/apps/portfolio/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: portfolio
